Complete FrontEnd RoomType Table